fixed alignment, was wrong by 2px

--- a/egw_fw.css
+++ b/egw_fw.css
@@ -69,7 +69,7 @@ body {
 	top: 53px;
 	bottom: 4px;
 	width: 217px;
-	padding-top: 5px;
+	padding-top: 3px;
 	overflow: hidden;
 	z-index: 0;
 }
